# PlandD

./: .env.example  .gitignore  PROJECT_STRUCTURE.md  README.internal.md  README.md  alembic.ini  config  conftest.py  init_database.py  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  setup.py  test_analyzer.py  test_bot.py  test_env.py  test_openai.py
alembic/versions/: v0_7_0_premium_features.py
docs/: developer_scenarios.md  development_diary_part2.md  project_structure.md
migrations/: env.py
migrations/versions/: initial_migration.py
scripts/: update_db.py
src/: __init__.py  bot.py  config.py  db.py  main.py  services.py
src/bot/: __init__.py  __main__.py  bot.py  keyboards.py  main.py
src/bot/handlers/: __init__.py  base.py  message_handlers.py  plan_handler.py  plan_handler_v2.py  premium_handler.py  tasks.py
src/bot/middlewares/: __init__.py  database.py
src/core/: config.py  exceptions.py
src/database/: __init__.py  base.py  database.py  db.py  models.py  models_v2.py  models_v3.py
src/database/migrations/: v0_6_1_time_structure.py
src/pland/: __init__.py
src/pland/bot/: __init__.py  __main__.py  bot.py  handlers.py  keyboards.py
src/pland/bot/handlers/: __init__.py  base.py  tasks.py
src/pland/core/: __init__.py  config.py
src/pland/database/: __init__.py  database.py  db.py  models.py
src/pland/database/data/: .gitkeep
src/pland/services/: __init__.py  voice_handler.py
src/pland/services/ai/: analyzer.py  planner.py
src/pland/services/reminder/: __init__.py  scheduler.py
src/pland/services/voice/: __init__.py  handler.py  transcriber.py
src/services/: __init__.py  plan_service_v2.py
src/services/ai/: __init__.py  ai_service.py  ai_service_v2.py  analyzer.py  learner.py  nlp_processor.py  planner.py
src/services/premium/: premium_service.py
src/services/reminder/: notifier.py  scheduler.py
tests/: conftest.py  test_ai_analyzer.py  test_ai_service.py  test_database.py  test_error_handling.py  test_handlers.py  test_integration.py  test_plan_service.py  test_services.py  test_tasks_handler.py  test_voice.py  test_voice_handler.py
