[project]
name = "pland"
version = "0.1.0"
description = "AI-powered Telegram bot for emergency daily planning"
requires-python = ">=3.10"

[project.dependencies]
aiogram = "^3.3.0"
openai = "^1.3.0"
python-dotenv = "^1.0.0"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"